# ytnb-embed

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  template.py  test.py  tox.ini
.github/workflows/: ci.yml  docs.yml  python-publish.yml
api/: index.html
contributing/: index.html
docs/: api.md  contributing.md  index.md  installation.md  privacy.md  quick-start.md
docs/usage/: advanced.md  basic.md  examples.md
installation/: index.html
license/: index.html
privacy/: index.html
quick-start/: index.html
search/: search_index.json
usage/advanced/: index.html
usage/basic/: index.html
usage/examples/: index.html
